<resources>
    <string name="app_name">Track my Balance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance_title">Balance Tracker</string>
    <string name="balance_intro">Your Balance is:</string>
    <string name="income_button">Income</string>
    <string name="purchase_button">Purchases</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="purchase_clear">Clear</string>
    <string name="header_text">My purchases</string>
    <string name="cleared_message">Every purchase is deleted!</string>
    <string name="incomes_cleared_message">Every income is deleted!</string>
    <string name="new_purchase">Add purchase</string>
    <string name="amount_hint">The amount of the purchase</string>
    <string name="date_hint">The date of the purchase</string>
    <string name="shop_hint">Where did you buy it?</string>
    <string name="close_details">Close Details</string>
    <string name="delete_purchase">Delete this purchase</string>
    <string name="add_income">Add Income</string>
    <string name="income_text">My incomes</string>
    <string name="income_amount_hint">The amount of the income</string>
    <string name="income_date_hint">The date of the income</string>
    <string name="purchase_amount_intro">You have spent:</string>
    <string name="income_amount_intro">You have received:</string>
    <string name="delete_income">Delete this income</string>
    <string name="fancy_images">Fancy Images</string>
    <string name="balance_tracker">Balance Tracker</string>
    <string name="about">About</string>
    <string name="about_text">Track my Balance is a very useful android app, which will help you keep track of your incomes and purchases. You will be able to check your balance at any time you want, so you will know how much money you are left with. \n\nWhen adding a new purchase you can choose its type from a preset list, set its amount, date, and where it took place. You can visualize all your purchases at once, and you can also check one\'s details by clicking on it. \n\nSimilarly useful feature is provided for keeping track of your incomes as well.  \n\nIf you\'re bored, you might also scroll trough some fancy pictures, which are obtained from the internet.</string>
    <string name="purchase_tracker">Purchase Tracker</string>
    <string name="income_tracker">Income Tracker</string>

    <string-array name="purchase_types">
        <item>Food</item>
        <item>Clothes</item>
        <item>Travel</item>
        <item>Entertainment</item>
        <item>Self-Care</item>
        <item>Sport</item>
        <item>Bill</item>
        <item>Utilities</item>
    </string-array>
</resources>
